# UniVLA

./: .gitignore  README.md  gpu_stress.py  hugging_download.py  learn.txt  pyproject.toml  requirements.txt  setup.py
docs/: real-world-deployment.md  room2room.md
experiments/robot/: openvla_utils.py  robot_utils.py
experiments/robot/calvin/: calvin_model.py  run_calvin_eval_ddp.py
experiments/robot/libero/: run_libero_eval.py  run_libero_eval_blocking.py
experiments/robot/r2r/: nonlearning_agents.py  r2r_utils.py  run_r2r_eval.py
experiments/robot/r2r/config/: eval_val_unseen.yaml  nonlearning.yaml  vlnce_task.yaml
experiments/robot/simpler-bridge/: eval_simpler_bridge_4task.sh  real2sim_eval_maniskill3.py
experiments/robot/simpler-bridge/policies/univla/: univla_model.py
latent_action_model/: main.py  train.sh
latent_action_model/config/: lam-stage-1.yaml  lam-stage-2.yaml
latent_action_model/genie/: dataset.py  model.py
latent_action_model/genie/modules/: __init__.py  blocks.py  lam.py
prismatic/: __init__.py
prismatic/conf/: vla.py
prismatic/models/: load.py
prismatic/models/backbones/llm/: base_llm.py  llama2.py
prismatic/models/backbones/vision/: dinosiglip_vit.py
prismatic/models/policy/: transformer_utils.py
prismatic/models/vlms/: prismatic.py
prismatic/training/strategies/: base_strategy.py
prismatic/util/: data_utils.py
prismatic/vla/: __init__.py  materialize.py
prismatic/vla/datasets/: __init__.py  calvin_dataset.py  datasets.py  r2r_dataset.py  real_world_dataset.py
prismatic/vla/datasets/rlds/: dataset.py  obs_transforms.py  traj_transforms.py
prismatic/vla/datasets/rlds/oxe/: configs.py  mixtures.py  transforms.py
prismatic/vla/datasets/rlds/oxe/utils/: droid_utils.py
vla-scripts/: fine.sh  finetune_calvin.py  finetune_libero.py  finetune_r2r.py  finetune_realworld.py  real_world_deployment.py  train.py  train.sh
